# imgutil

./: .gitignore  CMakeLists.txt  Makefile  Package.swift  README.md  configure  main.cpp
.github/workflows/: c-cpp.yml
Source/Run/: main.swift  run.swift
Tests/LiteImageTests/: TestExample.swift
liteim/: liteim.cpp  longest_mountain.cpp  spng.c
liteim/include/: examples.h  liteim.h  liteim.hpp  spng.h
src/: cimg.cpp  detect.cpp  detect_video.cpp  helpers.cpp  main.cpp  sharper.cpp  stream.cpp  utils.cpp
src/include/: cimg.h  cimg.hpp  detect.h  helpers.h  helpers.hpp  stream.hpp  utils.h
